--- a/views/account.pug
+++ b/views/account.pug
@@ -13,7 +13,7 @@ block content
       nav.user-view__menu
         ul.side-nav
           +navItem('#', 'Settings', 'settings', true)
-          +navItem('#', 'My bookings', 'briefcase')
+          +navItem('my-bookings', 'My bookings', 'briefcase')
           +navItem('#', 'My reviews', 'star')
           +navItem('#', 'Billing', 'credit-card')
 
@@ -42,7 +42,9 @@ block content
               input#email.form__input(type='email', value=`${user.email}`, required, name='email')
             .form__group.form__photo-upload
               img.form__user-photo(src=`/img/users/${user.photo}`, alt='User photo')
-              a.btn-text(href='') Choose new photo
+              input.form__upload(type='file',accpt='image/*',id='photo',name='photo')
+              label(for='photo') choose new photo
+              
             .form__group.right
               button.btn.btn--small.btn--green Save settings
 
