--- a/views/base.pug
+++ b/views/base.pug
@@ -21,4 +21,6 @@ html
         //- script(src='/js/mapbox.js')
         script(src='/js/login.js')
         script(src='/js/updatesettings.js')
+        script('https://js.stripe.com/v3/')
+        script(src='/js/stripe.js')
         
